--- a/Connect3Game/app/src/main/res/layout/activity_main.xml
+++ b/Connect3Game/app/src/main/res/layout/activity_main.xml
@@ -101,11 +101,11 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:layout_marginTop="13dp"
             android:layout_marginLeft="17dp"
+            android:layout_marginTop="13dp"
+            android:onClick="dropIn"
             app:layout_column="1"
-            app:layout_row="2"
-            app:srcCompat="@drawable/red" />
+            app:layout_row="2" />
 
         <ImageView
             android:id="@+id/imageView9"
