--- a/Connect3Game/app/src/main/res/layout/activity_main.xml
+++ b/Connect3Game/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,10 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
+            android:onClick="dropIn"
+            android:tag="0"
             app:layout_column="0"
-            app:layout_row="0"
-            app:srcCompat="@drawable/red" />
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -40,7 +41,8 @@
             android:layout_marginLeft="17dp"
             app:layout_column="1"
             app:layout_row="0"
-            app:srcCompat="@drawable/red" />
+            android:tag="1"
+            android:onClick="dropIn"/>
 
         <ImageView
             android:id="@+id/imageView3"
@@ -51,7 +53,8 @@
             android:layout_marginRight="10dp"
             app:layout_column="2"
             app:layout_row="0"
-            app:srcCompat="@drawable/red" />
+            android:tag="2"
+            android:onClick="dropIn"/>
 
         <ImageView
             android:id="@+id/imageView4"
@@ -61,7 +64,8 @@
             android:layout_marginTop="13dp"
             app:layout_column="0"
             app:layout_row="1"
-            app:srcCompat="@drawable/red" />
+            android:tag="3"
+            android:onClick="dropIn"/>
 
         <ImageView
             android:id="@+id/imageView5"
@@ -72,7 +76,8 @@
             android:layout_marginLeft="17dp"
             app:layout_column="1"
             app:layout_row="1"
-            app:srcCompat="@drawable/red" />
+            android:tag="4"
+            android:onClick="dropIn"/>
 
         <ImageView
             android:id="@+id/imageView6"
@@ -84,7 +89,8 @@
             android:layout_marginRight="10dp"
             app:layout_column="2"
             app:layout_row="1"
-            app:srcCompat="@drawable/red" />
+            android:tag="5"
+            android:onClick="dropIn"/>
 
         <ImageView
             android:id="@+id/imageView7"
@@ -94,7 +100,8 @@
             android:layout_marginTop="13dp"
             app:layout_column="0"
             app:layout_row="2"
-            app:srcCompat="@drawable/red" />
+            android:tag="6"
+            android:onClick="dropIn"/>
 
         <ImageView
             android:id="@+id/imageView8"
@@ -105,6 +112,7 @@
             android:layout_marginTop="13dp"
             android:onClick="dropIn"
             app:layout_column="1"
+            android:tag="7"
             app:layout_row="2" />
 
         <ImageView
@@ -117,7 +125,8 @@
             android:layout_marginRight="10dp"
             app:layout_column="2"
             app:layout_row="2"
-            app:srcCompat="@drawable/red" />
+            android:tag="8"
+            android:onClick="dropIn"/>
 
     </androidx.gridlayout.widget.GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
