--- a/BrainTrainer/app/src/main/res/layout/activity_main.xml
+++ b/BrainTrainer/app/src/main/res/layout/activity_main.xml
@@ -63,10 +63,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="368dp"
-        android:layout_height="405dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +79,7 @@
             android:id="@+id/button0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_purple"
+            android:background="@android:color/holo_red_light"
             android:onClick="chooseAnswer"
             android:tag="0"
             android:text="14"
@@ -95,43 +96,43 @@
             android:layout_height="wrap_content"
             android:background="@android:color/holo_purple"
             android:onClick="chooseAnswer"
-            android:tag="0"
+            android:tag="=1"
             android:text="14"
             android:textSize="80sp"
-            app:layout_column="0"
+            app:layout_column="1"
             app:layout_columnWeight="1"
             app:layout_gravity="fill"
             app:layout_row="0"
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_purple"
+            android:background="@android:color/holo_blue_dark"
             android:onClick="chooseAnswer"
-            android:tag="0"
+            android:tag="2"
             android:text="14"
             android:textSize="80sp"
             app:layout_column="0"
             app:layout_columnWeight="1"
             app:layout_gravity="fill"
-            app:layout_row="0"
+            app:layout_row="1"
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_purple"
+            android:background="@android:color/holo_green_light"
             android:onClick="chooseAnswer"
-            android:tag="0"
+            android:tag="3"
             android:text="14"
             android:textSize="80sp"
-            app:layout_column="0"
+            app:layout_column="1"
             app:layout_columnWeight="1"
             app:layout_gravity="fill"
-            app:layout_row="0"
+            app:layout_row="1"
             app:layout_rowWeight="1" />
     </androidx.gridlayout.widget.GridLayout>
 
