--- a/SomeToyProject/TwitterClone/app/src/main/res/values/themes.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.TwitterClone" parent="Base.Theme.TwitterClone" />
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
