--- a/SomeToyProject/TwitterClone/app/src/main/res/values/themes.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
     </style>
 
     <style name="Theme.TwitterClone" parent="Base.Theme.TwitterClone" />
-    <style name="AppTheme.NoActionBar">
+    <style name="AppTheme.NoActionBar" parent="Base.Theme.TwitterClone">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
