Design Entry Page

--- a/SomeToyProject/TwitterClone/app/src/main/res/values/colors.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary" >#dddddd</color>
+    <color name="colorPrimaryBlack">#bbbbbb</color>
+    <color name="white">#FFFFFF</color>
+    <color name="colorAccent">#209ee6</color>
+    <color name="black">#000000</color>
+    <color name="blue">#0000ff</color>
+    <color name="dark_grey">#777777</color>
+    <color name="transparency_grey">#99cccccc</color>
+    <color name="shadow_color">#cadddddd</color>
 </resources>
