--- a/SomeToyProject/TwitterClone/app/src/main/res/values/dimens.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="grid_3x">16dp</dimen>
     <dimen name="grid_4x">32dp</dimen>
     <dimen name="standard_width">300dp</dimen>
+    <dimen name="standard_height">50dp</dimen>
+    <dimen name="standard_text_size">20sp</dimen>
 </resources>
