--- a/SomeToyProject/TwitterClone/app/src/main/res/values/themes.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/values/themes.xml
@@ -11,4 +11,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="StandardButton" parent="Base.Theme.TwitterClone">
+        <item name="android:textColor" >@color/white</item>
+        <item name="android:textSize" >@dimen/standard_text_size</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:background">@drawable/standard_button_rounded</item>
+    </style>
+    <style name="LinkText" parent="Base.Theme.TwitterClone">
+        <item name="android:textColor">@color/blue</item>
+    </style>
 </resources>
