--- a/SomeToyProject/TwitterClone/app/src/main/res/layout/activity_login.xml
+++ b/SomeToyProject/TwitterClone/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
                 android:layout_below="@id/passwordTIL"
                 android:layout_centerHorizontal="true"
                 style="@style/StandardButton"
+                android:onClick="onLogin"
                 android:text="@string/button_login"
                 android:layout_margin="@dimen/grid_2x"/>
             <TextView
@@ -67,6 +68,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_margin="@dimen/grid_2x"
                 android:clickable="true"
+                android:onClick="goToSignUp"
                 style="@style/LinkText"
                 android:text="@string/text_signup"
                 />
