--- a/Notification/DemoApps/SimpleNoti/app/src/main/res/layout/activity_main.xml
+++ b/Notification/DemoApps/SimpleNoti/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/buttonNotify"
         android:text="Show Notifiation"
         android:textAllCaps="false"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
