--- a/ViewPager/RecyclerView/RecyclerViewExample/app/src/main/res/layout/contact_row.xml
+++ b/ViewPager/RecyclerView/RecyclerViewExample/app/src/main/res/layout/contact_row.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/txtName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Contact"
+                    android:text="Contact Name"
                     android:textSize="22sp"
                     android:textStyle="bold"/>
 
@@ -46,8 +46,8 @@
                     android:id="@+id/txtNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Contact"
-                    android:textSize="22sp"
+                    android:text="Contact Number"
+                    android:textSize="18sp"
                     android:textStyle="bold"/>
 
             </LinearLayout>
